@@ -6,6 +6,8 @@ profanity_zac_anger <- 'https://raw.githubusercontent.com/zacanger/profane-words
     unique() %>%
     sort()
 
+## drop non-ascii
+profanity_zac_anger <- grep('[^ -~]', profanity_zac_anger, value = TRUE, invert = TRUE)
 
 pax::new_data(profanity_zac_anger)
 pax:::roxdat(profanity_zac_anger, 'profanity_zac_anger')
